<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HistoryDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_chemical_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toStartOf="@+id/speak_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_image" />

        <ImageButton
            android:id="@+id/speak_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/detail_speak_button_description"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detail_chemical_name"
            app:layout_constraintBottom_toBottomOf="@+id/detail_chemical_name" />

        <TextView
            android:id="@+id/detail_chemical_formula"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/detail_chemical_name"
            app:layout_constraintStart_toStartOf="@+id/detail_chemical_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_chemical_name" />

        <LinearLayout
            android:id="@+id/button_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/detail_chemical_formula"
            app:layout_constraintTop_toBottomOf="@+id/detail_chemical_formula">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/view_3d_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_view_3d_button"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/view_ar_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/card_ar_viewer"/>

        </LinearLayout>

        <TextView
            android:id="@+id/sustainability_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/detail_sustainability_score_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/button_group"
            app:layout_constraintTop_toBottomOf="@+id/button_group" />

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/sustainability_chart"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/sustainability_score_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sustainability_score_label" />

        <TextView
            android:id="@+id/green_alternatives_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/detail_green_alternatives_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/sustainability_chart"
            app:layout_constraintTop_toBottomOf="@+id/sustainability_chart" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/green_alternatives_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/green_alternatives_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/green_alternatives_label"
            tools:listitem="@layout/item_alternative" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>